# hpc

./: .gitignore  .gitmodules  CMakeLists.txt  compile_and_run.sh
src/: SIMD.cpp  mpitest.cpp  mpitest.h  openmp.cpp  openmp.h
